--- a/develop/cli/package.json
+++ b/develop/cli/package.json
@@ -9,6 +9,9 @@
     "dev": "tsx src/index.ts",
     "build": "tsc",
     "start": "node bin/index.js",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest ui",
     "lint": "eslint src --ext .ts --fix"
   },
   "dependencies": {
