feat: 添加根目录 .env.example 用于 Docker 一键部署
- 合并 frontend/backend 环境变量到根目录
- 添加 .env 到 .gitignore 防止泄露敏感信息
- 用户只需 cp .env.example .env 即可启动

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ Thumbs.db
 # Testing
 coverage/
 
+# Environment variables (local secrets)
+.env
+.env.local
+.env.*.local
+
 # OpenClaw system files
 .openclaw/
 skills/
