--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,34 @@
 # ========== 数据库 ==========
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=ai_project
 POSTGRES_PORT=5432
-
-# 数据库连接字符串 (会自动组装，也可以手动指定)
-# DATABASE_URL=postgresql://postgres:your_secure_password_here@postgres:5432/ai_project
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/ai_project
 
 # ========== Redis ==========
 REDIS_URL=redis://redis:6379
 REDIS_PORT=6379
 
 # ========== JWT ==========
-JWT_SECRET=your_super_secure_jwt_secret_key_change_this
+JWT_SECRET=dev-secret-change-in-production
 JWT_EXPIRES_IN=7d
 
-# ========== GitHub OAuth (可选) ==========
-# 如果需要 GitHub 登录，去 https://github.com/settings/developers 创建 OAuth App
-GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_client_secret
-VITE_GITHUB_CLIENT_ID=your_github_client_id
-
-# ========== 应用配置 ==========
-APP_PORT=3000
-NODE_ENV=production
+# ========== 应用 ==========
 PORT=3000
+NODE_ENV=production
 LOG_LEVEL=info
 CORS_ORIGIN=http://localhost:80
 
-# ========== 端口配置 (可选) ==========
+# ========== GitHub OAuth (可选) ==========
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CALLBACK_URL=http://localhost:3000/auth/callback
+VITE_GITHUB_CLIENT_ID=
+
+# ========== 前端构建时需要 ==========
+VITE_API_BASE_URL=/api/v1
+
+# ========== 端口配置 ==========
 NGINX_HTTP_PORT=80
 NGINX_HTTPS_PORT=443
 PROMETHEUS_PORT=9090
