--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   # Nginx反向代理 (SSL)
   nginx:
     image: nginx:alpine
-    container_name: ai-project-nginx
+    container_name: aipm-nginx
     restart: unless-stopped
     ports:
       - "${NGINX_HTTP_PORT:-80}:80"
@@ -27,7 +27,7 @@ services:
       args:
         - VITE_API_BASE_URL=${VITE_API_BASE_URL:-/api/v1}
         - VITE_GITHUB_CLIENT_ID=${VITE_GITHUB_CLIENT_ID}
-    container_name: ai-project-app
+    container_name: aipm-app
     restart: unless-stopped
     ports:
       - "${APP_PORT:-80}:3000"
@@ -62,7 +62,7 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: ai-project-redis
+    container_name: aipm-redis
     restart: unless-stopped
     ports:
       - "${REDIS_PORT:-6379}:6379"
@@ -79,7 +79,7 @@ services:
 
   postgres:
     image: postgres:15-alpine
-    container_name: ai-project-postgres
+    container_name: aipm-postgres
     restart: unless-stopped
     environment:
       - POSTGRES_USER=${POSTGRES_USER:-postgres}
@@ -101,7 +101,7 @@ services:
 
   prometheus:
     image: prom/prometheus:latest
-    container_name: ai-project-prometheus
+    container_name: aipm-prometheus
     restart: unless-stopped
     ports:
       - "${PROMETHEUS_PORT:-9090}:9090"
@@ -121,7 +121,7 @@ services:
 
   grafana:
     image: grafana/grafana:latest
-    container_name: ai-project-grafana
+    container_name: aipm-grafana
     restart: unless-stopped
     ports:
       - "${GRAFANA_PORT:-3001}:3000"
@@ -140,7 +140,7 @@ services:
   # node-exporter for system metrics
   node-exporter:
     image: prom/node-exporter:latest
-    container_name: ai-project-node-exporter
+    container_name: aipm-node-exporter
     restart: unless-stopped
     ports:
       - "${NODE_EXPORTER_PORT:-9100}:9100"
