--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,18 @@
     "start": "node dist/app.js",
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "db:test:up": "docker-compose -f ../docker-compose.test.yml up -d",
+    "db:test:down": "docker-compose -f ../docker-compose.test.yml down -v",
+    "db:test:migrate": "dotenv -e .env.test -- prisma migrate deploy"
   },
   "dependencies": {
     "@fastify/compress": "^6.5.0",
+    "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.0",
+    "@fastify/static": "^7.0.1",
     "@fastify/postgres": "^6.0.0",
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^2.1.0",
@@ -30,7 +36,9 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "@vitest/coverage-v8": "^1.6.1",
     "dotenv": "^17.3.1",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
