--- a/docker/nginx.ssl.conf
+++ b/docker/nginx.ssl.conf
@@ -25,7 +25,7 @@ server {
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     location / {
-        proxy_pass http://app:3000;
+        proxy_pass http://aipm-app:4000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -43,20 +43,20 @@ server {
 
     # 静态资源缓存
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        proxy_pass http://app:3000;
+        proxy_pass http://aipm-app:4000;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
     # 健康检查端点
     location /health {
-        proxy_pass http://app:3000/health;
+        proxy_pass http://aipm-app:4000/health;
         access_log off;
     }
 
     # Prometheus指标端点
     location /metrics {
-        proxy_pass http://app:3000/metrics;
+        proxy_pass http://aipm-app:4000/metrics;
         proxy_set_header Host $host;
     }
 }
